Add copy to fracking issue

--- a/src/app/pages/issues/fracking/fracking.html
+++ b/src/app/pages/issues/fracking/fracking.html
@@ -9,7 +9,44 @@
         </blockquote>
 
         <p>
-            Coming Soon...
+            Fracking threatens the air we breathe and the water we drink. And the
+            issue is not isolated to just Western Maryland — five different
+            gas basins stretch across 19 different counties in Maryland, including
+            the Taylorsville gas basin, which stretches across half of
+            Anne Arundel County.
+        </p>
+
+        <p>
+            The process of fracking involves injecting millions of gallons of
+            chemicals into the ground to crack apart rock. The EPA has
+            identified <a href="https://www.epa.gov/sites/production/files/2015-03/documents/fracfocus_analysis_report_and_appendices_final_032015_508_0.pdf">692 different chemicals</a>
+            which are used, including large quantities of hydrochloric acid and methanol,
+            which can cause chemical burns, blindness, and even death.
+        </p>
+
+        <p>
+            These chemicals can invariably end up contaminating drinking water
+            and threatening the health of entire communities. But the threat is not
+            only to our water supply, but to our air as well. Research has now <a href="https://www.nrdc.org/sites/default/files/fracking-air-pollution-IB.pdf">linked fracking to unhealthy
+            levels of smog and toxic air contaminants</a> as well. Exposure can
+            cause respiratory illnesses, central nervous system damage, birth defects,
+            cancer, and even premature death.
+        </p>
+
+        <p>
+            In 2015, a temporary moratorium was placed on fracking, but that
+            moratorium is set to expire in October 2017 unless the General
+            Assembly acts now to extend it or permanently ban fracking in our state.
+        </p>
+
+        <p>
+            Risking the health and well-being of communities across Maryland just to
+            pump more climate-changing chemicals into the atmosphere makes no sense.
+        </p>
+
+        <p>
+            Let's keep fracking out of our state and focus on building a vibrant
+            renewable energy economy that can sustain well-paying jobs indefinitely.
         </p>
 
         <a href="/issues" class="back-to-issues">See other issues</a>
