Show Pam Beidle was endorsed by NRA

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -175,7 +175,7 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/check.svg" alt="yes"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>12</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                     <td><img src="/images/icons/x.svg" alt="no"><sup>12, 13</sup></td>
                 </tr>
@@ -249,13 +249,13 @@
                 (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb0580t.pdf">HB580 - 2016</a>).
             </li>
             <li>
+                <a href="http://votesmart.org/interest-group/1496/national-rifle-association-political-victory-fund">Endorsed</a>
+                by the NRA</a> in 2014.
+            </li>
+            <li>
                 <a href="http://openstates.org/md/bills/2016/HB1002/">Voted against</a> banning
                 firearms from college campuses.
                 (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb1002t.pdf">HB1002 - 2016</a>).
-            </li>
-            <li>
-                <a href="http://votesmart.org/interest-group/1496/national-rifle-association-political-victory-fund">Endorsed</a>
-                by the NRA</a> in 2014.
             </li>
         </ol>
 
