Treat social media links as local
Firefox Focus and possibly other ad blockers can
cause the links to not work at all when they
open in a new tab.

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -29,10 +29,10 @@
     </address>
 
     <div class="social">
-        <a href="https://facebook.com/DerekKentMD">
+        <a href="https://facebook.com/DerekKentMD" data-local="true">
             <img src="/images/social/facebook.svg" alt="Facebook">
         </a>
-        <a href="https://twitter.com/DerekKent">
+        <a href="https://twitter.com/DerekKent" data-local="true">
             <img src="/images/social/twitter.svg" alt="Twitter">
         </a>
     </div>
