Add public school funding copy

--- a/src/app/pages/issues/education/education.html
+++ b/src/app/pages/issues/education/education.html
@@ -8,6 +8,24 @@
             — Benjamin Franklin
         </blockquote>
 
+        <h2>Public School Funding</h2>
+
+        <p>
+            Over the last 7 years, casinos have pumped $1.7 billion into Maryland's Education Trust Fund, and they are expected to pump a staggering $500 million into the fund this year alone.
+        </p>
+
+        <p>
+            We were promised that money would go to public education, but the reality is less than half has actually gone to our public schools, and numerous districts are now actually facing budget cuts.
+        </p>
+
+        <p>
+            Additionally, in Anne Arundel County, our students receive among the lowest funding per pupil in the state, despite having the 3rd highest income per capita.
+        </p>
+
+        <p>
+            We must ensure the promises that were made about casinos funding education are kept by mandating that money added to the general education fund is spent on public education and does not serve to supplement what is required by the state's school-funding formula.
+        </p>
+
         <h2>Free Public College</h2>
 
         <p>
