Re-name school funding formula header

--- a/src/app/pages/issues/education/education.html
+++ b/src/app/pages/issues/education/education.html
@@ -73,7 +73,7 @@
             for any student graduating from a Maryland High School.
         </p>
 
-        <h2>School Funding</h2>
+        <h2>Funding Formula</h2>
 
         <p>
             The Bridge to Excellence in Public Schools Act, passed in 2002, has
