Fix typo in justice issue copy

--- a/src/app/pages/issues/justice/justice.html
+++ b/src/app/pages/issues/justice/justice.html
@@ -42,7 +42,7 @@
 
         <p>
             Delegates Mark Chang and Ted Sophocleus both <a href="http://openstates.org/md/votes/MDV00019608/">voted against</a> legislation that authorized people to have convictions which
-            are longer considered crimes to be expunged from their record — convictions
+            are no longer considered crimes to be expunged from their record — convictions
             that overwhelmingly targeted people of color. The legislation was so
             popular it passed unanimously in the Senate and was opposed by only two
             other Democrats in the entire House!
