Add citation for cosponsoring HB1167

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -120,9 +120,9 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>1</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>1, 2, 3</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>1, 3</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>1, 4</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>1, 2, 3, 4</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>1, 3, 4</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">LGBTQ Rights</th>
@@ -131,9 +131,9 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>4, 5</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>4, 6</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>4, 5</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>5, 6</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>5, 7</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>5, 6</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Criminal Justice Reform</th>
@@ -142,9 +142,9 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>9</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>7, 8, 9</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>7, 8, 9</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>10</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>8, 9, 10</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>8, 9, 10</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">$15 Minimum Wage</th>
@@ -153,7 +153,7 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>10</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>11</sup></td>
                     <td><img src="/images/icons/unknown.svg" alt="unknown"></td>
                     <td><img src="/images/icons/unknown.svg" alt="unknown"></td>
                 </tr>
@@ -164,7 +164,7 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>11</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>12</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                 </tr>
@@ -175,9 +175,9 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>12</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>13</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>12, 13</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>13, 14</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Veteran</th>
@@ -209,6 +209,10 @@
             <li>
                 <a href="https://votesmart.org/interest-group/910/maryland-right-to-life">Endorsed</a>
                 by anti-choice group Maryland Right to Life</a> in 2014.
+            </li>
+            <li>
+                <a href="https://openstates.org/md/bills/2017/HB1167/">Co-sponsored</a> anti-abortion bill
+                (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1167f.pdf">HB1167 - 2017</a>).
             </li>
             <li>
                 Voted against Pro-LGBTQ legislation
