Update to reflect Pam's vote for HB1

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -164,7 +164,7 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>12</sup></td>
+                    <td><img src="/images/icons/unknown.svg" alt="no"><sup>12, 13</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                 </tr>
@@ -175,9 +175,9 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>13</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>14</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>13, 14</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>14, 15</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Veteran</th>
@@ -253,8 +253,12 @@
                 (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb0580t.pdf">HB580 - 2016</a>).
             </li>
             <li>
-                <a href="http://votesmart.org/interest-group/1496/national-rifle-association-political-victory-fund">Endorsed</a>
-                by the NRA</a> in 2014.
+                <a href="https://openstates.org/md/votes/MDV00023663/">Voted for</a> (but did not
+                cosponsor) bill requiring employers to provide paid sick leave.
+                (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb0001t.pdf">HB1 - 2017</a>).
+            </li>
+            <li>
+                <a href="http://votesmart.org/interest-group/1496/national-rifle-association-political-victory-fund">Endorsed</a> by the NRA in 2014.
             </li>
             <li>
                 <a href="http://openstates.org/md/bills/2016/HB1002/">Voted against</a> banning
