Add pro-immigrant issue comparison

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -164,7 +164,7 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/unknown.svg" alt="no"><sup>12, 13</sup></td>
+                    <td><img src="/images/icons/unknown.svg" alt="unknown"><sup>12, 13</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                 </tr>
@@ -178,6 +178,17 @@
                     <td><img src="/images/icons/x.svg" alt="no"><sup>14</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                     <td><img src="/images/icons/x.svg" alt="no"><sup>14, 15</sup></td>
+                </tr>
+                <tr>
+                    <th scope="row">Pro-Immigrant</th>
+                    <td>
+                        <a href="/issues/guns">
+                            <img src="/images/icons/check.svg" alt="yes">
+                        </a>
+                    </td>
+                    <td><img src="/images/icons/check.svg" alt="yes"></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>16</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>16</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Veteran</th>
@@ -264,6 +275,11 @@
                 <a href="http://openstates.org/md/bills/2016/HB1002/">Voted against</a> banning
                 firearms from college campuses.
                 (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb1002t.pdf">HB1002 - 2016</a>).
+            </li>
+            <li>
+                <a href="https://openstates.org/md/bills/2017/HB1362/">Voted against</a> banning
+                a Muslim registry and preventing police from acting as immigration agents.
+                (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1362t.pdf">HB1362 - 2016</a>).
             </li>
         </ol>
 
