Add Justice Reinvestment Act votes

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -143,8 +143,8 @@
                         </a>
                     </td>
                     <td><img src="/images/icons/x.svg" alt="no"><sup>10</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>8, 9, 10</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>8, 9, 10</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>8, 9, 10, 11</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>8, 9, 10, 11</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">$15 Minimum Wage</th>
@@ -153,7 +153,7 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>11</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>12</sup></td>
                     <td><img src="/images/icons/unknown.svg" alt="unknown"></td>
                     <td><img src="/images/icons/unknown.svg" alt="unknown"></td>
                 </tr>
@@ -164,7 +164,7 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/unknown.svg" alt="unknown"><sup>12, 13</sup></td>
+                    <td><img src="/images/icons/unknown.svg" alt="unknown"><sup>13, 14</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
                 </tr>
@@ -175,9 +175,9 @@
                             <img src="/images/icons/check.svg" alt="yes">
                         </a>
                     </td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>14</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>15</sup></td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>14, 15</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>15, 16</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Pro-Immigrant</th>
@@ -185,8 +185,8 @@
                         <img src="/images/icons/check.svg" alt="yes">
                     </td>
                     <td><img src="/images/icons/check.svg" alt="yes"></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>16</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>16</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>17</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>17</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">Veteran</th>
@@ -212,7 +212,7 @@
                 voting record</a> from the anti-choice group Maryland Right to Life.
             </li>
             <li>
-                <a href="http://openstates.org/md/bills/2016/HB603/">Co-sponsored</a> anti-abortion bill
+                <a href="//openstates.org/md/bills/2016/HB603/">Co-sponsored</a> anti-abortion bill
                 (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb0603F.pdf">HB603 - 2016</a>).
             </li>
             <li>
@@ -220,12 +220,12 @@
                 by anti-choice group Maryland Right to Life</a> in 2014.
             </li>
             <li>
-                <a href="https://openstates.org/md/bills/2017/HB1167/">Co-sponsored</a> anti-abortion bill
+                <a href="//openstates.org/md/bills/2017/HB1167/">Co-sponsored</a> anti-abortion bill
                 (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1167f.pdf">HB1167 - 2017</a>).
             </li>
             <li>
                 Voted against Pro-LGBTQ legislation
-                (<a href="http://openstates.org/md/votes/MDV00020156/">SB743 — 2015</a>).
+                (<a href="//openstates.org/md/votes/MDV00020156/">SB743 — 2015</a>).
                 Only one other Democrat voted against it.
             </li>
             <li>
@@ -237,32 +237,37 @@
                 by anti-gay marriage group Protect Marriage Maryland in 2014.
             </li>
             <li>
-                <a href="http://openstates.org/md/votes/MDV00020673/">Voted against</a> repealing
+                <a href="//openstates.org/md/votes/MDV00020673/">Voted against</a> repealing
                 mandatory minimum sentences for drug-related offenses.
                 (<a href="http://mgaleg.maryland.gov/2015RS/Chapters_noln/CH_490_hb0121e.pdf">HB121 - 2015</a>).
             </li>
             <li>
-                <a href="http://openstates.org/md/votes/MDV00019608/">Voted against</a> expunging
+                <a href="//openstates.org/md/votes/MDV00019608/">Voted against</a> expunging
                 convictions for crimes that no longer exist.
                 (<a href="http://mgaleg.maryland.gov/2015RS/bills/hb/hb0124t.pdf">HB124 - 2015</a>).
             </li>
             <li>
-                <a href="http://openstates.org/md/votes/MDV00019608/">Voted against</a> restoring
+                <a href="//openstates.org/md/votes/MDV00019608/">Voted against</a> restoring
                 voting rights to ex-felons who served their time.
                 (<a href="http://mgaleg.maryland.gov/2015RS/bills/hb/hb0980t.pdf">HB980 - 2015</a>).
             </li>
             <li>
-                <a href="http://openstates.org/md/votes/MDV00020673/">Voted against</a>
+                ONLY Democrats who <a href="//openstates.org/md/bills/2017/HB1418/">voted against</a> the
+                Justice Reinvestment Act modifications.
+                (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1418t.pdf">HB1418 - 2017</a>).
+            </li>
+            <li>
+                <a href="//openstates.org/md/votes/MDV00020673/">Voted against</a>
                 amendment to increase minimum wage to $11.37 by 2023
                 (<a href="http://mgaleg.maryland.gov/2014RS/amds/bil_0005/hb0295_34392001.pdf">HB0295/343920/1 - 2014</a>).
             </li>
             <li>
-                <a href="http://openstates.org/md/votes/MDV00022205/">Voted against</a> requiring
+                <a href="//openstates.org/md/votes/MDV00022205/">Voted against</a> requiring
                 employers to provide paid sick leave.
                 (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb0580t.pdf">HB580 - 2016</a>).
             </li>
             <li>
-                <a href="https://openstates.org/md/votes/MDV00023663/">Voted for</a> (but did not
+                <a href="//openstates.org/md/votes/MDV00023663/">Voted for</a> (but did not
                 cosponsor) bill requiring employers to provide paid sick leave.
                 (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb0001t.pdf">HB1 - 2017</a>).
             </li>
@@ -270,14 +275,14 @@
                 <a href="http://votesmart.org/interest-group/1496/national-rifle-association-political-victory-fund">Endorsed</a> by the NRA in 2014.
             </li>
             <li>
-                <a href="http://openstates.org/md/bills/2016/HB1002/">Voted against</a> banning
+                <a href="//openstates.org/md/bills/2016/HB1002/">Voted against</a> banning
                 firearms from college campuses.
                 (<a href="http://mgaleg.maryland.gov/2016RS/bills/hb/hb1002t.pdf">HB1002 - 2016</a>).
             </li>
             <li>
-                <a href="https://openstates.org/md/bills/2017/HB1362/">Voted against</a> banning
+                <a href="//openstates.org/md/bills/2017/HB1362/">Voted against</a> banning
                 a Muslim registry and preventing police from acting as immigration agents.
-                (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1362t.pdf">HB1362 - 2016</a>).
+                (<a href="http://mgaleg.maryland.gov/2017RS/bills/hb/hb1362t.pdf">HB1362 - 2017</a>).
             </li>
         </ol>
 
