Adjust citation font size to fit

--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -181,6 +181,7 @@
             }
 
             > sup {
+                font-size: 0.9rem;
                 position: absolute;
                 right: 0;
                 top: 0;
