Reflect passage of Clean Energy Jobs Act

--- a/src/app/pages/issues/energy/energy.html
+++ b/src/app/pages/issues/energy/energy.html
@@ -43,7 +43,7 @@
 
         <p>
             The <a href="http://mgaleg.maryland.gov/webmga/frmMain.aspx?id=hb1106&stab=01&pid=billpage&tab=subject3&ys=2016RS">Clean Energy Jobs Act</a>
-            is a great start. It would require Maryland to get 25% of its power
+            is a great start. It requires Maryland to get 25% of its power
             from clean energy sources like wind and solar by 2020, but we can't
             stop there.
         </p>
