Maintain link color on buttons

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -68,12 +68,14 @@ a {
     color: color(links);
     text-decoration: none;
 
-    @include wcag2-aa {
-        color: color(links, dark);
-    }
+    &:not(.btn) {
+        @include wcag2-aa {
+            color: color(links, dark);
+        }
 
-    @include wcag2-aaa {
-        color: color(links, dark);
+        @include wcag2-aaa {
+            color: color(links, dark);
+        }
     }
 
     &:active,
