--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -4,6 +4,37 @@
         <h1>News</h1>
 
         <article class="newsletter">
+            <h2>Resist Trump and the AAC Dems Supporting Him</h2>
+            <time datetime="2017-03-26">March 26, 2017</time>
+
+            <p>
+                Did you see the <a href="http://www.capitalgazette.com/news/general_assembly/ph-ac-cn-north-county-dems-0325-20170324-story.html">Capital Gazette article</a>
+                on Friday about the three Anne Arundel County Democrats who joined
+                with Republicans to defend Trump's immigration policies?
+            </p>
+
+            <p>
+                Mark Chang even echoed Trump's rhetoric when he said “we need
+                to be able to have all law enforcement officers work together in
+                <em>dealing with bad elements</em>.”
+            </p>
+
+            <p>
+                <strong>We need Democrats in Annapolis who will stand up to Trump
+                and resist his xenophobic and racist policies.</strong>
+            </p>
+
+            <p>
+                Can you pitch in $35 today to help defeat Mark Chang and the
+                other pro-Trump Democrats?
+            </p>
+
+            <p class="center">
+                <a class="btn btn-blue" href="https://secure.actblue.com/contribute/page/derekkent?refcode=trustact&amount=35">Donate Now</a>
+            </p>
+        </article>
+
+        <article class="newsletter">
             <h2>Tell Democracy for America to Endorse Derek</h2>
             <time datetime="2017-01-18">Jan. 18, 2017</time>
 
