Add stop and search graphic to justice reform

--- a/src/app/pages/issues/justice/justice.html
+++ b/src/app/pages/issues/justice/justice.html
@@ -16,8 +16,10 @@
             for 29% of all traffic stops and 35% of police searches</a>.
         </p>
 
+        <img src="/images/issues/justice/stop-and-search.png" alt="Blacks are 4 times more likely to be stopped and searched than whites">
+
         <p>
-            In Maryland, a black person is almost 5 times more likely to be
+            In Maryland as a whole, a black person is almost 5 times more likely to be
             incarcerated than a white person.
         </p>
 
