Add 2017 GA Session Review

--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -4,6 +4,80 @@
         <h1>News</h1>
 
         <article class="newsletter">
+            <h2>2017 General Assembly Session Review</h2>
+            <time datetime="2017-04-12">April 12, 2017</time>
+
+            <p>
+                The 437th session of the General Assembly has now wrapped up,
+                providing some important wins for Marylanders, mixed with a couple
+                frustrating defeats and a deafening silence on much needed changes
+                to ensure that everyone benefits from a growing economy and that
+                every person is treated equally under the law.
+            </p>
+
+            <p>
+                A permanent ban on fracking (HB1325), efforts to combat heroin
+                addictions (HB1329 — the HOPE Act, and HB1082 — Start Talking Maryland Act),
+                guaranteed paid sick leave (HB1 — Maryland Healthy Working Families Act),
+                and a prohibition on generic drug price gouging (HB631) all represent
+                important, positive changes that are beneficial to northern Anne Arundel
+                County and all Marylanders.
+            </p>
+
+            <p>
+                As a state, we also took important steps to resist some of the worst
+                impulses of the Trump administration, such as empowering the Attorney
+                General to sue the federal government. Funding for Planned Parenthood
+                is now also guaranteed — no thanks to any of our District 32 delegates
+                though, who all voted for Floor Amendment 943425/1, which would have
+                stripped the funding guarantee from the FY2018 Budget Bill (HB150).
+            </p>
+
+            <p>
+                Unfortunately, HB1362 (the Trust Act) fell 2 votes shy of a veto-proof
+                majority in the House (with 2 Delegates from District 32, Mark Chang
+                and Ted Sophocleus, voting against it) and failed to get a floor vote
+                in the Senate.
+            </p>
+
+            <p>
+                Efforts to end Maryland's cash bail system achieved mixed results during
+                the session, with legislation attempting to end the practice ultimately
+                being pulled and the bail bond industry very nearly forcing through a bill
+                (SB983) to restore the system after the Maryland Court of Appeals ruled
+                that defendants cannot be held in jail simply because they can't afford bail.
+                Continued vigilance next session will be necessary to ensure reforms here
+                are not overturned.
+            </p>
+
+            <p>
+                Legislators on both sides of the isle also patted themselves on the back
+                for passing large tax breaks for big businesses under the flawed belief
+                that it will attract meaningful manufacturing jobs to the state. Senator
+                Manno, the lone Senator to vote against the bill, called it “a steak dinner
+                for big business and a chicken box for the workers” — an assessment that
+                will likely prove to be true.
+            </p>
+
+            <p>
+                Much more needs to be done to tackle economic disparity and poverty in our
+                state in a materially consequential way. That includes exploring a universal
+                basic income or citizen's wage to raise families out of poverty and spur
+                economic activity, providing a tuition-free college education at our state
+                colleges and universities to help our young people realize a brighter future,
+                and guaranteeing that no Marylander is saddled with crippling debt due to
+                unmanageable health care costs. These initiatives will collectively do far
+                more to stimulate and grow our economy.
+            </p>
+
+            <p>
+                I look forward to working with you in 2018 to hold our elected officials
+                accountable and to ensure that they represent the interests of the
+                residents of District 32.
+            </p>
+        </article>
+
+        <article class="newsletter">
             <h2>Resist Trump and the AAC Dems Supporting Him</h2>
             <time datetime="2017-03-26">March 26, 2017</time>
 
