--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -122,7 +122,7 @@
                     </td>
                     <td><img src="/images/icons/x.svg" alt="no"><sup>1, 4</sup></td>
                     <td><img src="/images/icons/x.svg" alt="no"><sup>1, 2, 3, 4</sup></td>
-                    <td><img src="/images/icons/x.svg" alt="no"><sup>1, 3, 4</sup></td>
+                    <td><img src="/images/icons/x.svg" alt="no"><sup>1, 2, 3, 4</sup></td>
                 </tr>
                 <tr>
                     <th scope="row">LGBTQ Rights</th>
